# fwrs

./: .gitignore  Cargo.toml  memory.x
.cargo/: config.toml
app/: Cargo.toml
app/src/: main.rs
crates/fwrs/: Cargo.toml  build.rs
crates/fwrs/src/: comms.rs
crates/fwrs/src/devices/: et16s.rs
firmware-rs/: Cargo.toml
firmware-rs/src/devices/: transmitter.rs
src/: controls.rs  devices.rs  fcb.rs  main.rs  utils.rs
src/controls/: controllers.rs  state.rs
teensy-core/: Cargo.toml
teensy-core/src/: lib.rs
teensy4-bsp/: Cargo.toml
teensy4-bsp/src/: board.rs  lib.rs
teensy4-panic/: Cargo.toml
teensy4-pins/: Cargo.toml
tools/: upload.sh
