[package]
name = "teensy4-bsp"
version = "0.5.1"
edition = "2024"
description = """
Rust-based BSP for the Teensy 4.
Part of the teensy4-rs project.
"""

[dependencies.cortex-m]
features = ["critical-section-single-core"]
workspace = true

[dependencies.imxrt-ral]
workspace = true
features = ["imxrt1062"]

[dependencies.imxrt-hal]
workspace = true
features = ["imxrt1060"]

[dependencies.imxrt-rt]
workspace = true
optional = true
features = ["device"]

[build-dependencies.imxrt-rt]
workspace = true
optional = true
features = ["device"]

[dependencies.teensy4-pins]
path = "../teensy4-pins"

[features]
rt = [
    "dep:imxrt-rt",
    "imxrt-ral/rt",
]
