[package]
name = "fwrs"
version = "0.1.0"
edition = "2024"

[dependencies]
imxrt-hal = { version = "0.5.11", features = ["imxrt1060"] }
imxrt-ral = { version = "0.5.4", features = ["imxrt1062", "rt"] }
imxrt-rt = { version = "0.1.7", features = ["device"] }
imxrt-boot-gen = { version = "0.3.4", features = ["imxrt1060"] }
panic-halt = "1.0.0"
cortex-m = "0.7.7"

[build-dependencies]
# The same runtime as above.
imxrt-rt = "0.1"
